--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,6 +1,7 @@
 The Ruby-Eth Contributors are:
 * Steve Ellis @se3000
 * Afri Schoedon @q9f
+* John Omar @chainoperator
 
 See also:
 * https://github.com/q9f/eth.rb/graphs/contributors
