--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -4,3 +4,12 @@ The Ruby-Eth Contributors are:
 
 See also:
 * https://github.com/q9f/eth.rb/graphs/contributors
+
+The Ruby-Eth project was maintained 2016-2020 in Steve Ellis's (@se3000)
+repository licensed under MIT conditions:
+* https://github.com/se3000/ruby-eth
+
+The latest version of the Ruby-Eth gem contains a revised version the
+ABI gem by Jan Xie (@janx) and Zhang Yaning (@u2) licensed under MIT
+conditions:
+* https://github.com/cryptape/ruby-ethereum-abi
