Smart Contract Support (#68)
* Smart Contract Support

* moved files

* remove unused truffle functions

* add contract spec

* deploy and deploy_and_wait

* Secure the address

* fix Contract::Initializer

* Enable create from file

* fix create contract spec

* fix Contract::Event

* Implement call to client

* AUTHORS

* delete create_function_proxies

* remove unused methods

* fixed args

* remove Contract::Deployment

* Avoid active_support dependency

* remove dependency activesupport

* add spec: deploy the contract with key

* add spec: legacy transactions

* use Eth::Util

* Use Eth::Contract for deploy

* set and return the contract address

* .transact .transact_and_wait

* Use keyword argument

* add docs

* Remove encoder dependencies

* Remove decoder dependencies

* remove unused methods

* add test for Contract::Abi.parse_abi()

* remove unused methods

* add test FunctionInput & functionOutput

* add test for Contract::Function

* use Eth::Abi::Type

* add test for contract

* Documentation of contract class

* add test cases for transact and call methods

* rufo

* Move parse_abi() into contract class

* 100.00% documented

* use Eth::Address

* encoded_function_signature

* add docs for client methods

* add test for call()

* If contract.address is set, use it.

* update README

* Update lib/eth/client.rb

Co-authored-by: Afr Schoe <58883403+q9f@users.noreply.github.com>

* Update lib/eth/client.rb

Co-authored-by: Afr Schoe <58883403+q9f@users.noreply.github.com>

* Update spec/fixtures/contracts/test_contract.sol

Co-authored-by: Afr Schoe <58883403+q9f@users.noreply.github.com>

* forwardable does not require

* Use constant values for smart contract costs

Co-authored-by: Afr Schoe <58883403+q9f@users.noreply.github.com>

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -3,6 +3,7 @@ The Ruby-Eth Contributors are:
 * Afri Schoedon @q9f
 * John Omar @chainoperator
 * Joshua Peek @josh
+* Yuta Kurotaki @kurotaky
 
 See also:
 * https://github.com/q9f/eth.rb/graphs/contributors
