--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,9 +1,10 @@
 The Ruby-Eth Contributors are:
 * Steve Ellis @se3000
 * Afri Schoedon @q9f
+* Yuta Kurotaki @kurotaky
 * John Omar @chainoperator
 * Joshua Peek @josh
-* Yuta Kurotaki @kurotaky
+* Gerald Bauer @geraldb
 
 See also:
 * https://github.com/q9f/eth.rb/graphs/contributors
@@ -12,9 +13,9 @@ The Ruby-Eth project was maintained 2016-2020 in Steve Ellis's (@se3000)
 repository licensed under MIT conditions:
 * https://github.com/se3000/ruby-eth
 
-The latest Ruby-Eth gem is not only a rewrite of the aforementioned gem 
+The latest Ruby-Eth gem is not only a rewrite of the aforementioned gem
 but also a partial merge of the Ethereum.rb Ruby Ethereum library by
-Marek Kirejczyk (@marekkirejczyk) and Yuta Kurotaki (@kurotaky) licensed 
+Marek Kirejczyk (@marekkirejczyk) and Yuta Kurotaki (@kurotaky) licensed
 under MIT conditions:
 * https://github.com/EthWorks/ethereum.rb
 
@@ -22,6 +23,10 @@ The latest version of the Ruby-Eth gem includes a revised version of the
 ABI gem by Jan Xie (@janx) and Zhang Yaning (@u2) licensed under MIT
 conditions:
 * https://github.com/cryptape/ruby-ethereum-abi
+
+The latest version of the Ruby-Eth gem includes a revised version of the
+ABI gem by Gerald Bauer (@geraldb) released to the public domain:
+* https://github.com/rubycocos/blockchain/tree/master/abicoder
 
 The latest version of the Ruby-Eth gem contains a condensed version of the
 RLP gem by Jan Xie (@janx) and Zhang Yaning (@u2) licensed under MIT
